added easel.js and leap.js libs. Beware that easel CDN have broken SSL sertificate and you need to manually fix it

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!doctype html>
-
-Placeholder
+<head>
+    <meta charset="utf-8">
+    <title>Create Leap</title>
+</head>
+<body>
+    <canvas id="can"></canvas>
+    
+    
+    <script src="https://code.createjs.com/easeljs-0.6.0.min.js"></script>
+    <script src="https://raw.github.com/leapmotion/leapjs/master/leap.min.js"></script>
+    <script src="main.js"></script>
+</body>
