--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="utf-8">
     <title>Create Leap</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
         #out {
             position: absolute;
             top: 20px;
@@ -14,7 +18,7 @@
     <canvas id="can"></canvas>
 
 
-    <script src="http://code.createjs.com/easeljs-0.6.0.min.js"></script>
+    <script src="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
     <script src="leap.js"></script>
     <!--<script src="https://raw.github.com/leapmotion/leapjs/master/leap.js"></script>-->
     <script src="main.js"></script>
